# veoable

./: .dockerignore  .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  SUPPORT.md  eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.base.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: ci.yml
audit/: README.md
docs/: MCPInteractionBestPractices.md  architecture-2.md  architecture.md  client-side-call-graph.md  cross-boundary-stitching.md  graphbenefits.md  graphgeneration.md  llm-client-install.md  mcp-tools-guide.md  mcp-usage.md  quickstart.md  reactnative-only-app-fromscratch.md  reactnative-only-app.md  requirements.md  server-side-call-graph.md  updateanduserguideApr9.md  usecases.md  userguide.md
examples/: musiccardapp.project.json
test-apps/: FINDINGS.md  REPORT.md  report.json  run-report.mjs
test-apps/04-trading-dash/backend/: Cargo.toml
test-apps/04-trading-dash/backend/src/: main.rs  orders.rs  portfolio.rs  queue.rs  routes.rs  state.rs
test-apps/04-trading-dash/worker/: Cargo.toml
test-apps/04-trading-dash/worker/src/: handler.rs  main.rs
tests/: full-stack-integration.test.ts  go-frameworks-integration.test.ts  go-integration.test.ts  integration.test.ts  java-integration.test.ts  non-web-cli-integration.test.ts  php-integration.test.ts  rust-frameworks-integration.test.ts  rust-integration.test.ts  sample-apps-integration.test.ts  stack-react-express-prisma.test.ts  vitest.config.ts
(+827 files in other folders)
